--- a/app/app/scss/style.scss
+++ b/app/app/scss/style.scss
@@ -89,6 +89,7 @@
     &__title{
         font-size: 20px;
         line-height: 24px;
+        color: #000;
 
 
     }
@@ -96,6 +97,9 @@
         font-size: 20px;
         line-height: 25px;
         color: #000;
+        font-family: lora;
+        margin-bottom: 0;
+        margin-top: 5px;
     }
     &__logo-inner{
         display: flex;
@@ -106,23 +110,29 @@
         justify-content: space-between;
         align-items: center;
         margin-bottom: 5px;
-        &-inner{
+        &__inner{
             display: flex;
             flex-direction: column;
             align-items:center;
+            margin-bottom: -39px;
         }
     }
     &__search{
         cursor: pointer;
         margin-right: 30px;
         &-input{
-            display: none;
+            opacity: 0;
             margin: 0 auto; 
+            transition: all 0.2s;
         }
     }
     .header__search-input.active{
         cursor: pointer;
-        display: block;
+        opacity: 1;
+        transition: all 0.2s;
+    }
+    &__eye{
+        cursor: pointer;
     }
     &__photos-item{
         margin-right: 30px;
@@ -138,7 +148,22 @@
         display: none;
         z-index: 4;
     }
-    
+    &__input-inner{
+        display: flex;
+        flex-direction: column;
+    }
+    &__nav-inner{
+        display: flex;
+        justify-content: space-between;
+        margin-right: 0;
+        margin: auto;
+        .header__search{
+            margin-right: 10px;
+        }
+    }
+    &__burger-partners-title{
+        cursor: pointer;
+    }
 }
 
 .slider{
@@ -234,7 +259,7 @@
     .slick-dots{
         list-style: none;
         outline: none; 
-     z-index: 5;
+        z-index: 5;
         max-width: 1200px;
         display: flex;
         justify-content: flex-start;
@@ -264,7 +289,7 @@
             border:none;
             padding: 0;
             border-radius: 50%;
-            margin:0 30px ;
+            margin:0 15px ;
             background-color: #fff;
             border: 2px solid #000;
             &:last-child{
@@ -392,8 +417,8 @@
 
     }
     &__btn{
-        background: rgb(2,0,36);
-        background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(0,0,0,1) 0%, rgba(0,0,0,0.12) 0%, rgba(245,245,245,0.01) 100%);
+        background: rgb(0,0,0);
+        background: linear-gradient(0deg, rgba(0,0,0,0.55) 2%, rgba(255,255,255,0) 100%);
         text-decoration: none;
         cursor: pointer;
         margin-bottom: 200px;
@@ -407,6 +432,7 @@
         box-shadow: 3px 2px 8px rgba( #000000,  0.74);
         border: none;
         transition: all 0.2s;
+        text-transform: uppercase;
         &:hover{
             color: #fff;
             background-color: #3f3e3e;
@@ -536,6 +562,7 @@
                 line-height: 20px;
                 color:#676767;
                 font-family: lora;
+                margin-bottom: 0;
             }
             &-mounth{
                 text-transform: uppercase;
@@ -679,17 +706,17 @@ a{
         &-title{
             margin-left: 0;
             font-size: 12px;
-            line-height: 20px;
+            line-height: 12px;
             color: #fff;
             background-color:rgba(#000000,  0.5);
             padding: 10px 16px;
         }
         &-text{
+            
             margin-bottom: 0;
             list-style: none;
             text-overflow: ellipsis;
             overflow: hidden;
-            max-height: 100px;
             display: flex;
             justify-content: flex-start;
             flex-direction: column;
@@ -697,6 +724,7 @@ a{
         }
         
             &-text-p{
+                margin-top: 0;
                 font-family: lora;
                 background-color: #0f8376;
                 color: #fff;
@@ -861,8 +889,8 @@ a{
         }
     }
     &__btn{
-        background: rgb(2,0,36);
-        background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(0,0,0,1) 0%, rgba(0,0,0,0.12) 0%, rgba(245,245,245,0.01) 100%);
+        background: rgb(0,0,0);
+        background: linear-gradient(0deg, rgba(0,0,0,0.22) 2%, rgba(255,255,255,0) 100%);
         text-decoration: none;
         cursor: pointer;
         color:#fff;
@@ -877,6 +905,7 @@ a{
         box-shadow: 3px 2px 8px rgba( #000000,  0.74);
         border: none;
         transition: all 0.2s;
+        text-transform: uppercase;
         &:hover{
             color: #fff;
             background-color: #3f3e3e;
@@ -893,6 +922,7 @@ a{
     background-position:right 00px top;
     &__descr{
         font-size: 21px;
+        margin: 0;
         color: #fff;
         text-align: center;
         padding: 70px 0 450px;
@@ -914,17 +944,17 @@ html body .bvi-body[data-bvi-theme=green] * {
     background-color: transparent !important;
 }
 html body .bvi-body[data-bvi-theme=white] * {
-    background-color: transparent !important;
+    
 }
 html body .bvi-body[data-bvi-theme=black] * {
-    background-color: transparent !important;
+    
 }
 html body .bvi-body[data-bvi-theme=blue] * {
-    background-color: transparent !important;
+    
 }
 
 html body .bvi-body[data-bvi-theme=brown] * {
-    background-color: transparent !important;
+    
 }
 .important__item-big.important__item-big-1.bvi-background-image{
     background-color: #fff;
@@ -937,7 +967,31 @@ html body .bvi-body[data-bvi-theme=brown] * {
     padding-top: 20px;
     padding-bottom: 20px;
 }
-
+.breadcrumbs{
+    &__inner{
+        display: flex;
+        list-style: none;
+    }
+    &__item{
+        margin-right: 20px;
+        position: relative;
+        &::after{
+            content: ">";
+            color: #d16a19;
+            display: block;
+            height: 15px;
+            width: auto;
+            top: 3px;
+            right: -14px;
+            position: absolute;
+        }
+        &-last{
+            &::after{
+                content: '';
+            }
+        }
+    }
+}
 
 
 
