--- a/app/app/scss/style.scss
+++ b/app/app/scss/style.scss
@@ -90,6 +90,7 @@
         font-size: 20px;
         line-height: 24px;
         color: #000;
+        text-transform: uppercase;
 
 
     }
@@ -181,11 +182,23 @@
         box-shadow: 0 0.01px 12px #575555 inset;
 
     }
+    .slider__item-1{
+        .slider__inner  {
+            padding-top: 200px;
+        }
+    
+    }
     .slider__item-2{
         background-position: top -121px left -73px;
         background-size: 120%;
+        .slider__inner  {
+         padding-top: 170px;
+        }
     }
     .slider__item-3{
+        .slider__inner  {
+            padding-top: 70px;
+        }
         .slider__uptite{
             font-size: 20px;
             line-height: 26px;
@@ -205,6 +218,9 @@
     .slider__item-4{
         background-position: top -115px left -136px;
         background-size: 117%;
+        .slider__inner  {
+            padding-top: 70px;
+        }
         .slider__uptite{
             font-size: 20px;
             font-weight: bold;
@@ -225,6 +241,9 @@
         }
     }
     .slider__item-6{
+        .slider__inner  {
+            padding-top: 70px;
+        }
         .slider__title{
             font-size: 27px;
             line-height: 39px;
@@ -417,12 +436,11 @@
 
     }
     &__btn{
-        background: rgb(0,0,0);
-        background: linear-gradient(0deg, rgba(0,0,0,0.55) 2%, rgba(255,255,255,0) 100%);
+        background: rgb(50,154,148);
+        background: linear-gradient(0deg, rgba(50,154,148,1) 10%, rgba(18,159,145,1) 54%, rgba(35,217,199,1) 84%);
         text-decoration: none;
         cursor: pointer;
         margin-bottom: 200px;
-        background-color: #129f91;
         color:#fff;
         font-size: 15px;
         line-height: 20px;
@@ -468,13 +486,14 @@
     }
 }
 .news{
+    padding: 40px 0  30px  0 ;
     &__template{
         padding-bottom: 50px;
     }
     &__inner-template{
         padding-bottom: 30px;
     }
-    padding: 30px 0 0px;
+
     background-color: #ecebe8;
     &__container{
         display: flex;
@@ -538,6 +557,7 @@
             text-overflow: ellipsis;
             overflow: hidden;
             max-height: 100px;
+            margin-top: 0;
         }
         &-link{
             margin-bottom: 20px;
@@ -889,8 +909,8 @@ a{
         }
     }
     &__btn{
-        background: rgb(0,0,0);
-        background: linear-gradient(0deg, rgba(0,0,0,0.22) 2%, rgba(255,255,255,0) 100%);
+        background: rgb(255,112,0);
+        background: linear-gradient(0deg, rgba(255,112,0,1) 54%, rgba(245,153,80,1) 84%);
         text-decoration: none;
         cursor: pointer;
         color:#fff;
@@ -900,7 +920,6 @@ a{
         line-height: 20px;
         padding: 25px 70px;
         margin: 0 auto;
-        background-color: #d97c1d;
         border-radius: 34px;
         box-shadow: 3px 2px 8px rgba( #000000,  0.74);
         border: none;
