--- a/app/app/app/scss/style.scss
+++ b/app/app/app/scss/style.scss
@@ -5,20 +5,21 @@
 @import "global";
 @import "template";
 
-
 .preloader {
+    /*фиксированное позиционирование*/
     position: fixed;
+    /* координаты положения */
     left: 0;
     top: 0;
     right: 0;
     bottom: 0;
-    overflow: hidden;
-    /* фоновый цвет */
+    /* фоновый цвет элемента */
     background: #e0e0e0;
+    /* размещаем блок над всеми элементами на странице (это значение должно быть больше, чем у любого другого позиционированного элемента на странице) */
     z-index: 1001;
   }
   
-  .preloader__image {
+  .preloader__row {
     position: relative;
     top: 50%;
     left: 50%;
@@ -30,51 +31,49 @@
     animation: preloader-rotate 2s infinite linear;
   }
   
+  .preloader__item {
+    position: absolute;
+    display: inline-block;
+    top: 0;
+    background-color: #337ab7;
+    border-radius: 100%;
+    width: 35px;
+    height: 35px;
+    animation: preloader-bounce 2s infinite ease-in-out;
+  }
+  
+  .preloader__item:last-child {
+    top: auto;
+    bottom: 0;
+    animation-delay: -1s;
+  }
+  
   @keyframes preloader-rotate {
     100% {
       transform: rotate(360deg);
     }
   }
   
-
-  .preloader {
-    position: fixed;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    overflow: hidden;
-    /* фоновый цвет */
-    background: #e0e0e0;
-    z-index: 1001;
-  }
-
-  .preloader__image {
-    position: relative;
-    top: 50%;
-    left: 50%;
-    width: 70px;
-    height: 70px;
-    margin-top: -35px;
-    margin-left: -35px;
-    text-align: center;
-    animation: preloader-rotate 2s infinite linear;
-  }
-  @keyframes preloader-rotate {
+  @keyframes preloader-bounce {
+  
+    0%,
     100% {
-      transform: rotate(360deg);
+      transform: scale(0);
+    }
+  
+    50% {
+      transform: scale(1);
     }
   }
-
+  
   .loaded_hiding .preloader {
     transition: 0.3s opacity;
     opacity: 0;
   }
-
+  
   .loaded .preloader {
     display: none;
   }
-
 .header{
     &__inner{
         display: flex;
@@ -447,14 +446,13 @@
         padding: 25px 70px !important;
         font-weight: bold;
         border-radius: 34px;
-        box-shadow: 3px 2px 8px rgba( #000000,  0.74);
         border: none;
-        transition: all 0.2s;
+        transition: all 0.5s;
         text-transform: uppercase;
         &:hover{
-            color: #fff;
-            background-color: #3f3e3e;
-            transition: all 0.2s;
+            color:#fff;
+            background: #3f3e3e;
+            transition: all 0.5s;
         }
     }
           
@@ -841,6 +839,11 @@ a{
     display: flex;
     flex-direction: column;
     align-items:center;
+    &__submit-input{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
     &__form{
         width: 100%;
         display: flex;
@@ -923,12 +926,12 @@ a{
         border-radius: 34px;
         box-shadow: 3px 2px 8px rgba( #000000,  0.74);
         border: none;
-        transition: all 0.2s;
+        transition: all 0.5s;
         text-transform: uppercase;
         &:hover{
             color: #fff;
-            background-color: #3f3e3e;
-            transition: all 0.2s;
+            background: #3f3e3e;
+            transition: all 0.5s;
         }
     }
 }
@@ -990,6 +993,7 @@ html body .bvi-body[data-bvi-theme=brown] * {
     &__inner{
         display: flex;
         list-style: none;
+        padding: 0;
     }
     &__item{
         margin-right: 20px;
@@ -1005,6 +1009,13 @@ html body .bvi-body[data-bvi-theme=brown] * {
             position: absolute;
         }
         &-last{
+            a{
+                text-decoration: none;
+            }
+           span{
+            color: #ababab;
+            
+           }
             &::after{
                 content: '';
             }
