--- a/app/app/app/scss/style.scss
+++ b/app/app/app/scss/style.scss
@@ -23,8 +23,8 @@
     position: relative;
     top: 50%;
     left: 50%;
-    width: 70px;
-    height: 70px;
+    width: 70px !important;
+    height: 70px !important;
     margin-top: -35px;
     margin-left: -35px;
     text-align: center;
