--- a/app/app/app/scss/style.scss
+++ b/app/app/app/scss/style.scss
@@ -1039,7 +1039,7 @@ html body .bvi-body[data-bvi-theme=brown] * {
 .submit__inner{
     max-width: width 500px;
     flex: 0 0 50%;
-    text-align: right;
+    text-align: center;
     background-color: rgba($color: #fff, $alpha: .7);
     height: 100%;
     padding: 20px 10px;
