--- a/app/app/app/scss/style.scss
+++ b/app/app/app/scss/style.scss
@@ -5,6 +5,55 @@
 @import "global";
 @import "template";
 
+
+
+.loader_bg{
+    position: fixed;
+    z-index: 999999;
+    background:#fff;
+    width: 100%;
+    height: 100%;
+
+}
+.loader{
+    border: 0 solid transparent;
+    border-radius:50%;
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    top: calc(50vh - 75px);
+    left: calc(50vw - 75px);
+}
+.loader::before, .loader:after{
+    content: '';
+    border:1em solid #ff5733;
+    border-radius:50%;
+    width: inherit;
+    height: inherit;
+    position: absolute;
+    top: 0;
+    left: 0;
+    animation: loader 2s linear infinite;
+
+}
+.loader::before{
+    animation-delay:0.5s;
+
+}
+@keyframes loader{
+    0%{
+        transform: scale(0);
+        opacity: 0;
+    }
+    50%{
+        opacity: 1;
+    }
+    100%{
+        transform: scale(1);
+    }
+}
+
+
 .preloader {
     /*фиксированное позиционирование*/
     position: fixed;
@@ -1037,7 +1086,6 @@ html body .bvi-body[data-bvi-theme=brown] * {
     }
 }
 .submit__inner{
-    max-width: width 500px;
     flex: 0 0 50%;
     text-align: center;
     background-color: rgba($color: #fff, $alpha: .7);
