--- a/app/app/app/scss/style.scss
+++ b/app/app/app/scss/style.scss
@@ -462,6 +462,7 @@
 
     }
     &__btn{
+        outline: none;
         background: rgb(50,154,148);
         background: linear-gradient(0deg, rgba(50,154,148,1) 10%, rgba(18,159,145,1) 54%, rgba(35,217,199,1) 84%);
         text-decoration: none;
@@ -476,10 +477,30 @@
         border: none;
         transition: all 0.5s;
         text-transform: uppercase;
-        &:hover{
+        position: relative;
+        & > span{
+            position: relative;
+            z-index: 10;
+            color: #fff;
+        }
+        &:after {
+            z-index: 1;
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            color: #fff;
+            text-decoration: none;
+            background:rgba($color: #3f3f3f, $alpha: 1);
+            border-radius: 30px;
+            opacity: 0;
+            transition: opacity 0.5s;
+        }
+        &:hover:after {
+            opacity: 1;
             color:#fff;
-            background: #3f3e3e;
-            transition: all 0.5s;
         }
     }
           
@@ -552,6 +573,7 @@
         padding: 5px;
         transition: all 0.2s;
         margin-right: -15px;
+        
         &:nth-last-child(){
             margin-right: -15px;
         }
@@ -559,13 +581,21 @@
         &:hover{
             transition: all 0.2s;
             box-shadow: 0px 0px 26px -2px rgba(0,0,0,0.55);
+            background-color: #fff;
+            border-radius: 17px;
+            .news__item-img{
+                border-radius: 17px;
+            }
             .news__item-title{
                 color:#d16a19 ;
             }
         }
         &-img{
             margin-bottom: 20px;
+            transition: all 0.2s;    
+            
         }
+
         &-title{
             font-size: 17px;
             line-height: 23px;
@@ -610,8 +640,10 @@
                 color:#676767;
                 font-family: lora;
                 margin-bottom: 0;
+                font-weight: bold;
             }
             &-mounth{
+                font-weight: bold;
                 text-transform: uppercase;
                 text-align: center;
                 font-size: 12px;
@@ -622,6 +654,7 @@
             }
         }
         &-btn{
+            outline: none;
             text-decoration: none;
             margin-left: 0;
             cursor: pointer;
@@ -737,7 +770,7 @@ a{
     &__item-big{
         margin-bottom: 23px;
         height: 406px;
-        width: 520px;
+        width: 577px;
         padding:20px 30px 60px ;
         position: relative;
         align-items:flex-start;
@@ -792,6 +825,7 @@ a{
         right: -12px;
         top: 18px;
         z-index: 1;
+        
     }
     &__item{
         margin-bottom: 30px;
@@ -812,6 +846,7 @@ a{
             position: relative;
         }
         &-mounth{
+            font-weight: bold;
             font-weight: normal;
             font-size: 14px;
             line-height: 22px;
@@ -870,7 +905,7 @@ a{
 .form{
     background-repeat: no-repeat;
     background-size: cover;
-    background-position:center;
+    background-position:left;
     padding: 60px 0 40px;
     display: flex;
     flex-direction: column;
@@ -943,7 +978,8 @@ a{
         }
     }
     &__btn{
-        background: rgb(255,112,0);
+        outline: none;
+        background: #d16a19;
         background: linear-gradient(0deg, rgba(255,112,0,1) 54%, rgba(245,153,80,1) 84%);
         text-decoration: none;
         cursor: pointer;
@@ -959,11 +995,29 @@ a{
         border: none;
         transition: all 0.5s;
         text-transform: uppercase;
-        margin-bottom: 0px;
-        &:hover{
+        position: relative;
+        & > span{
+            position: relative;
+            z-index: 10;
+        }
+        &:after {
+            z-index: 0;
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             color: #fff;
-            background: #3f3e3e;
-            transition: all 0.5s;
+            text-decoration: none;
+            background:rgba($color: #3f3f3f, $alpha: 1);
+            border-radius: 30px;
+            opacity: 0;
+            transition: opacity 0.5s;
+        }
+        &:hover:after {
+            opacity: 1;
+            color:#fff;
         }
     }
 }
@@ -973,7 +1027,7 @@ a{
     }
     background-repeat: no-repeat;
     background-size: cover;
-    background-position:right 00px top;
+    background-position:center;
     &__descr{
         font-size: 21px;
         margin: 0;
@@ -986,7 +1040,7 @@ a{
     justify-content: center;
 }
 .news__item{
-    margin-right: 30px;
+    margin-right: 35px;
 }
 
 
@@ -1016,10 +1070,12 @@ html body .bvi-body[data-bvi-theme=brown] * {
 .slider__btn.bvi-background-image{
     padding-top: 20px;
     padding-bottom: 20px;
+    outline: none;
 }
 .form__btn.bvi-background-image{
     padding-top: 20px;
     padding-bottom: 20px;
+    outline: none;
 }
 .breadcrumbs{
     &__inner{
@@ -1082,6 +1138,22 @@ html body .bvi-body[data-bvi-theme=brown] * {
 .g-recaptcha{
     max-width:295px !important;
 }
+/*final*/
+.calendar .datepicker--cell.datepicker--cell-day{
+    background-color: #ecebe8;
+    border: 1px solid #fff;
+    font-family: lora;
+    font-weight: bold;
+}
+    .calendar .datepicker--day-name{
+    font-family: lora;
+    font-weight: bold;
+    }
+    
+    .datepicker--nav-title{
+    font-family: lora;
+    font-weight: bold;
+    }
 
 
 @import "media";
