--- a/app/app/app/app/scss/style.scss
+++ b/app/app/app/app/scss/style.scss
@@ -66,6 +66,10 @@
 
 
 .header{
+    position: relative;
+    max-width:1200px;
+    margin: 0 auto;
+    padding-bottom: 10px;
     &__inner{
         display: flex;
         justify-content: space-between;
@@ -113,7 +117,7 @@
         position: relative;
     }
     .header__search-input input {
-    width: 200px;
+    width: 100%;
     height: 32px;
     padding-left: 10px;
     border: 2px solid #7BA7AB;
@@ -183,7 +187,8 @@
         display: flex;
         justify-content: space-between;
         margin-right: 10px;
-        margin-left: 50px;
+        margin-left: 10px;
+        align-items: center;
         .header__search{
             margin-right: 10px;
         }
@@ -480,7 +485,7 @@
         position: relative;
         & > span{
             position: relative;
-            z-index: 10;
+            z-index: 10 !important;
             color: #fff;
         }
         &:after {
@@ -506,6 +511,7 @@
           
 }
 .nav{
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.3);
     &__inner{
         max-width: 1200px;
         display: flex;
@@ -1166,6 +1172,25 @@ html body .bvi-body[data-bvi-theme=brown] * {
     font-family: lora;
     font-weight: bold;
     }
+
+    .header__search-input-inner {
+    position: absolute;
+    margin-left: 10px;
+    width: 96%;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+}
+
+.header__logo-inner-inner{
+    position: relative;
+    
+}
+.header__eye{
+    
+} 
+
+
 
 
 @import "media";
