--- a/app-bar/scss/style.scss
+++ b/app-bar/scss/style.scss
@@ -570,8 +570,8 @@
             font-weight: normal;
             font-size: 20px;
             line-height: 23px;
-            &:nth-last-child(){
-                margin-right: 0;
+            &:nth-last-child(1){
+                margin-right: 0 !important;
             }
             &:hover{
                 color: #F5A243;
