--- a/app-port/scss/style.scss
+++ b/app-port/scss/style.scss
@@ -111,6 +111,9 @@ h1,h2,h3,h4,h5,h6,p{
 }
 .portfolio{
     padding: 100px 0;
+    .container{
+        max-width:100%;
+    }
     &__inner{
         display: flex;
         flex-direction: column;
